fix copyright align

--- a/index.css
+++ b/index.css
@@ -11,6 +11,8 @@ body {
   font-family: "Nunito", sans-serif;
   background: #27272c;
   color: #278ea5;
+  position:relative;
+  padding-bottom: 10px;
 }
 
 h1 {
